<resources>
    <string name="hello_blank_fragment">Yeni Fragment</string>
    <string name="app_name">Akşam Pazarı</string>
    <string name="night">AKŞAM</string>
    <string name="bazaar_splash">PAZARI</string>
    <string name="bazaar">PAZAR</string>
    <string name="category">Category</string>
    <string name="fresh_products">Taze Ürünler</string>
    <string name="baker_product">Fırın Ürünleri</string>
    <string name="dairy_product">Süt Ve Süt Ürünleri</string>
    <string name="delicatessen_product">Şerküteri Ürünleri</string>
    <string name="organic_product">Organik Ürünler</string>
    <string name="seafood_product">Deniz Ürünleri</string>
    <string name="ready_food_product">Hazır Yemekler</string>
    <string name="drinks_product">İçecekler</string>
    <string name="login">Giriş Yap</string>
    <string name="e_mail">e-mail</string>
    <string name="password">şifre</string>
    <string name="password_verification">şifre onayı</string>
    <string name="go_register">Henüz kayıtlı değilseniz buraya tıklayın</string>
    <string name="register">Kayıt Ol</string>
    <string name="name">ad</string>
    <string name="surname">soyad</string>
    <string name="already_registered">Zaten kayıtlıysanız buraya tıklayın.</string>
    <string name="email_password_not_blank">E-mail veya şifre boş bırakılamaz!</string>
    <string name="register_successful">Kayıt başarılı.</string>
    <string name="register_failed">Kayıt başarısız!</string>
    <string name="not_yet_register">Henüz kayıtlı değilseniz buraya tıklayın.</string>
    <string name="login_successful">Giriş başarılı.</string>
    <string name="email_password_error">Emial veya şifreniz hatalı!</string>
    <string name="no_internet_connection">İnternete bağlantınızı kontrol edin!</string>
    <string name="password_not_confirmed">Şifre onaylanmadı!</string>
    <string name="profile">PROFİL</string>
    <string name="default_name">Ella Logan</string>
    <string name="default_id">ID: 000000001</string>
    <string name="default_settings_name">Settings Name</string>
    <string name="default_settings_description">Settings Description</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="save">Kaydet</string>
    <string name="balance">Bakiye:</string>
    <string name="default_money">0.00</string>
    <string name="card_number">kart numarası</string>
    <string name="card_day">gün</string>
    <string name="card_month">ay</string>
    <string name="card_cvv">cvv</string>
    <string name="add_and_finish">Ekle ve Bitir</string>
    <string name="phone_number">Telefon Numarası:</string>
    <string name="default_phone_number">(555) 12 34</string>
    <string name="email_settings">Email:</string>
    <string name="default_email">example@example.com</string>
    <string name="number">numara</string>
    <string name="email">email</string>
    <string name="address">Adres:</string>
    <string name="default_address">1753 Red Maple Drive ...</string>
    <string name="city">il</string>
    <string name="town">ilçe</string>
    <string name="neighborhood">mahalle</string>
    <string name="street">sokak</string>
    <string name="door_number">kapı numarası</string>
    <string name="settings_password">Şifre:</string>
    <string name="default_settings_password">**********</string>
    <string name="new_password">yeni şifre</string>
    <string name="delete_account_warning">Hesabınızı silmek için email ve şifrenizi girin.</string>
    <string name="delete_account">Hesabı Sil</string>
    <string name="default_balance">0.00</string>
    <string name="communication">İletişim: </string>
    <string name="default_communication">(555)1234: </string>
    <string name="exit_app">Uygulamadan Çık</string>
    <string name="are_u_sure_exit">Uygulamdan çıkmak istediğinize emin misiniz ?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="order_history">Sipariş Geçmişi</string>
    <string name="ok">Tamam</string>
    <string name="notification">Bildirim</string>
    <string name="open">Aç</string>
    <string name="close">Kapat</string>
</resources>