<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.settings.SettingsComminicationFragment">

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:fontFamily="@font/exo_bold"
        android:layout_marginStart="32dp"
        android:text="@string/phone_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/app_orange"
        android:fontFamily="@font/exo_light"
        android:text="@string/default_phone_number"
        app:layout_constraintTop_toTopOf="@id/tv_phone_number"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_number"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/exo_bold"
        android:text="@string/email_settings"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
        app:layout_constraintStart_toStartOf="@id/tv_phone_number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/app_orange"
        android:fontFamily="@font/exo_light"
        android:text="@string/default_email"
        app:layout_constraintStart_toEndOf="@id/tv_email"
        app:layout_constraintTop_toTopOf="@id/tv_email"/>

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_text_background"
        android:ems="18"
        android:fontFamily="@font/exo_light"
        android:hint="@string/number"
        android:inputType="number"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/app_orange"
        android:textColorHint="@color/app_orange"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_text_background"
        android:ems="18"
        android:fontFamily="@font/exo_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/app_orange"
        android:textColorHint="@color/app_orange"
        app:layout_constraintStart_toStartOf="@id/et_phone_number"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number"
        tools:ignore="Autofill,TextFields" />

    <Button
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="26dp"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />
</androidx.constraintlayout.widget.ConstraintLayout>