<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.settings.SettingsAddressFragment">

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/exo_bold"
        android:textColor="@color/white"
        android:text="@string/address"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/exo_light"
        android:textColor="@color/app_orange"
        android:text="@string/default_address"
        app:layout_constraintStart_toEndOf="@+id/tv_address"
        app:layout_constraintTop_toTopOf="@id/tv_address"/>

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_text_background"
        android:ems="18"
        android:fontFamily="@font/exo_light"
        android:hint="@string/city"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/app_orange"
        android:textColorHint="@color/app_orange"
        app:layout_constraintTop_toBottomOf="@id/tv_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_town"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_text_background"
        android:ems="18"
        android:fontFamily="@font/exo_light"
        android:hint="@string/town"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/app_orange"
        android:textColorHint="@color/app_orange"
        app:layout_constraintTop_toBottomOf="@id/et_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/et_neighborhood"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_text_background"
        android:ems="18"
        android:fontFamily="@font/exo_light"
        android:hint="@string/neighborhood"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/app_orange"
        android:textColorHint="@color/app_orange"
        app:layout_constraintTop_toBottomOf="@id/et_town"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/et_street"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_text_background"
        android:ems="18"
        android:fontFamily="@font/exo_light"
        android:hint="@string/street"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/app_orange"
        android:textColorHint="@color/app_orange"
        app:layout_constraintTop_toBottomOf="@id/et_neighborhood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/et_door_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_text_background"
        android:ems="18"
        android:fontFamily="@font/exo_light"
        android:hint="@string/door_number"
        android:inputType="number"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/app_orange"
        android:textColorHint="@color/app_orange"
        app:layout_constraintTop_toBottomOf="@id/et_street"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill"/>

    <Button
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_door_number"
        app:layout_constraintEnd_toEndOf="@id/et_door_number"/>

</androidx.constraintlayout.widget.ConstraintLayout>